--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8080
 
+spring.datasource.url=jdbc:mysql://localhost:3306/weblibrary?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+#spring.datasource.url=jdbc:h2:mem:weblibrary
+spring.datasource.username=root
+spring.datasource.password=password
+
+#Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=
+spring.jpa.show-sql=true
+
+#To see how hibernate works
+logging.level.org.hibernate.sql=DEBUG
