--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-server.port=8080
+server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/weblibrary?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url = jdbc:mysql://localhost:3306/weblibrary
 spring.datasource.username=root
 spring.datasource.password=password
 
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #To see how hibernate works
 logging.level.org.hibernate.sql=DEBUG
