--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
 
-spring.datasource.url = jdbc:mysql://localhost:3306/weblibrary
+spring.datasource.url = jdbc:mysql://localhost:3306/weblibrary1
 spring.datasource.username=root
 spring.datasource.password=password
 
